--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <section class="ad__section">
         <div id="logo"></div>
         <div id="score__bar">4,500,000</div>
+        <div id="machine">
+            <div id="wheel__dragons"></div>
+            <div id="wheel"></div>
+            <div id="pointer"></div>
+            <div id="spins__progress"></div>
+        </div>
+        <div id="spin__btn">
+            <div id="barrel__btn"></div>
+            <div id="barrel"></div>
+        </div>
     </section>
     <script src="js/main.js"></script>
 </body>
