--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
             <div id="nature"></div>
             <div id="house"></div>
             <div id="pet"></div>
-            <div id="house_atc__btn" class='attack_btn'><div class="btn_border"></div></div>
-            <div id="nature_atc__btn" class='attack_btn'><div class="btn_border"></div></div>
-            <div id="ship_atc__btn" class='attack_btn'><div class="btn_border"></div></div>
-            <div id="pet_atc__btn" class='attack_btn'><div class="btn_border"></div></div>
+            <div id="house_atc__btn" class='attack_btn' data-attack='house'><div class="btn_border"></div></div>
+            <div id="nature_atc__btn" class='attack_btn' data-attack='nature'><div class="btn_border"></div></div>
+            <div id="ship_atc__btn" class='attack_btn' data-attack='ship'><div class="btn_border"></div></div>
+            <div id="pet_atc__btn" class='attack_btn' data-attack='pet'><div class="btn_border"></div></div>
+            <canvas id="explr_canvas" width="468" height="468"></canvas>
         </div>
         <div id="cannon"><canvas id="canon_fire" width="100" height="100"></canvas></div>
+        <div id="cannon__ball"></div>
 
         
     </section>
