--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <div id="attack_gun" class="opacity-anime"></div>
         </div>
 
+        
+        <div id="spins_rays" class="opacity-anime">
+            <div id="spins_txt" ></div>
+            <div id="spins_bottle" class="opacity-anime"></div>
+        </div>
         <div id="island">
             <div id="ship"></div>
             <div id="island_platform"></div>
@@ -48,7 +53,6 @@
         </div>
         <div id="cannon"><canvas id="canon_fire" width="100" height="100"></canvas></div>
         <div id="cannon__ball"></div>
-
         
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
