--- a/index.html
+++ b/index.html
@@ -13,11 +13,43 @@
         <div id="score__bar"><span>4,500,000</span></div>
         <div id="machine">
             <div id="wheel__dragons"></div>
-            <div id="wheel"></div>
-            <div id="pointer"></div>
             <div id="spins__progress">
                 <div id="glos" class="spins_15"></div>
             </div>
+            <div id="wheel"></div>
+            <div id="pointer"></div>
+        </div>
+        <div id="win_coins">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
         <div id="spin__btn">
             <div id="barrel__btn" class="btn__transition"></div>
@@ -37,7 +69,20 @@
         
         <div id="spins_rays" class="opacity-anime">
             <div id="spins_txt" ></div>
-            <div id="spins_bottle" class="opacity-anime"></div>
+        </div>
+        <div id="spins_overlay">
+            <div id="spins_bottle" class="opacity-anime">
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+                <div class="spin_drop"></div>
+            </div>
         </div>
         <div id="island">
             <div id="ship"></div>
@@ -53,6 +98,31 @@
             <div id="cannon__ball"></div>
         </div>
         <div id="cannon"><canvas id="canon_fire" width="100" height="100"></canvas></div>
+
+        <div id="fp_logo"></div>
+        <div id="fp_ship">
+            <div id="ship"></div>
+            <div id="canonn_ball1"></div>
+            <div id="cannon_ball2"></div>
+        </div>
+        <div id="fp_pirate">
+            <div id="boat"></div>
+            <div id="pirate"></div>
+        </div>
+        <div id="fp_coins">
+            <div data-value='1'></div>
+            <div data-value='2'></div>
+            <div data-value='3'></div>
+            <div data-value='4'></div>
+            <div data-value='5'></div>
+            <div data-value='6'></div>
+        </div>
+        <div id="fp_install__btn">
+            <div id="btn"></div>
+            <div id="bird">
+                <div id="eye"></div>
+            </div>
+        </div>
         
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
