--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div id="spin__btn">
             <div id="barrel__btn" class="btn__transition"></div>
             <div id="barrel"></div>
+            <div id="barrel_clickable_btn"></div>
         </div>
         <div id="ch_overlay"></div>
         <div id="ch_pirate__block">
@@ -66,7 +67,6 @@
             <div id="attack_gun" class="opacity-anime"></div>
         </div>
 
-        
         <div id="spins_rays" class="opacity-anime">
             <div id="spins_txt" ></div>
         </div>
@@ -85,11 +85,11 @@
             </div>
         </div>
         <div id="island">
-            <div id="ship"></div>
+            <div id="ship" class="island__bg"></div>
             <div id="island_platform"></div>
-            <div id="nature"></div>
-            <div id="house"></div>
-            <div id="pet"></div>
+            <div id="nature" class="island__bg"></div>
+            <div id="house" class="island__bg"></div>
+            <div id="pet" class="island__bg"></div>
             <div id="house_atc__btn" class='attack_btn' data-attack='house'><div class="btn_border"></div></div>
             <div id="nature_atc__btn" class='attack_btn' data-attack='nature'><div class="btn_border"></div></div>
             <div id="ship_atc__btn" class='attack_btn' data-attack='ship'><div class="btn_border"></div></div>
